docs(plan): record P4 optimization notes from M4.2 review